src/test/deca/syntax/invalid/include_file_not_found.deca
#include "file_not_found.deca"
{println(1);}